# my-lightcuts

./: CMakeLists.txt  README.md  report.tex
Resources/Models/: face.off  face_unit_cube.off  man.off  simp-face.off  simp-face_unit_box.off  sphere.off  sphere_high_res.off  two_triangles.off
Resources/Shaders/: DisplayFragmentShader.glsl  DisplayVertexShader.glsl  PBRFragmentShader.glsl  PBRVertexShader.glsl
Sources/: BRDF.cpp  BRDF.hpp  BVH.cpp  BVH.hpp  BoundingBox.cpp  BoundingBox.hpp  Camera.cpp  Camera.h  Console.cpp  Console.h  Error.cpp  Error.h  Image.h  LightCut.cpp  LightCut.hpp  LightSource.cpp  LightSource.hpp  Main.cpp  Material.hpp  Mesh.cpp  Mesh.h  MeshLoader.cpp  MeshLoader.h  Model.hpp  Random.cpp  Random.hpp  Rasterizer.cpp  Rasterizer.h  Ray.cpp  Ray.hpp  RayTracer.cpp  RayTracer.h  Resources.h  Scene.h  ShaderProgram.cpp  ShaderProgram.h  Transform.h
